Ora2 notification for graded assignment changed as per teamwork

--- a/openassessment/templates/openassessmentblock/grading_completed.html
+++ b/openassessment/templates/openassessmentblock/grading_completed.html
@@ -1,6 +1,12 @@
 <p> Lieber Kursteilnehmer,</p>
 
-<p> Sie haben eine neue Bewertung erhalten. Bitte besuchen Sie diesen Link:   </p>
+<p> Sie haben eine neue Bewertung im Kurs {{ course_id }} erhalten.    </p>
 
-<a href="{{ redirect_url }}">  {{ redirect_url }} </a>
+<p><b>Ihre Bewertung</b></p>
+<p>{{ points_earned }} - Aufgabe erfüllt</p>
+
+<p>Für Details Ihrer Bewertung besuchen Sie diesen Link:</p>
+<p><a href="{{ redirect_url }}">  {{ redirect_url }} </a></p>
+
+<p>Diese E-Mail wurde automatisch von der LYNX Online-Training Plattform versandt.</p>
 
