Grading notification fixed

--- a/openassessment/templates/openassessmentblock/grading_completed.html
+++ b/openassessment/templates/openassessmentblock/grading_completed.html
@@ -1,9 +1,12 @@
-<p> Lieber Kursteilnehmer,</p>
+<p>Lieber Kursmitarbeiter,</p>
 
-<p> Sie haben eine neue Bewertung im Kurs {{ course_id }} erhalten.    </p>
+<p> Sie haben eine neue Bewertung im Kurs {{ course_name }} erhalten.    </p>
+
+<p><b>Lektion</b></p>
+<p>{{parent_display_name}}</p>
 
 <p><b>Ihre Bewertung</b></p>
-<p>{{ points_earned }} - Aufgabe erfüllt</p>
+<p>{{ points_earned }}</p>
 
 <p>Für Details Ihrer Bewertung besuchen Sie diesen Link:</p>
 <p><a href="{{ redirect_url }}">  {{ redirect_url }} </a></p>
