Ora staff notification fixed.

--- a/openassessment/templates/openassessmentblock/grading_completed.html
+++ b/openassessment/templates/openassessmentblock/grading_completed.html
@@ -1,15 +1,15 @@
-<p>Lieber Kursmitarbeiter,</p>
+<p>Lieber Kursteilnehmer,</p>
 
-<p> Sie haben eine neue Bewertung im Kurs {{ course_name }} erhalten.    </p>
-
+<p> Sie haben eine neue Bewertung im Kurs ,,{{ course_name }}'' erhalten.    </p>
+<br/>
 <p><b>Lektion</b></p>
 <p>{{parent_display_name}}</p>
-
+<br/>
 <p><b>Ihre Bewertung</b></p>
-<p>{{ points_earned }}</p>
-
+<p>Punktzahl: {{ points_earned }}</p>
+<br/>
 <p>Für Details Ihrer Bewertung besuchen Sie diesen Link:</p>
 <p><a href="{{ redirect_url }}">  {{ redirect_url }} </a></p>
-
+<br/>
 <p>Diese E-Mail wurde automatisch von der LYNX Online-Training Plattform versandt.</p>
 
